# zero-cost-state-machine

./: Cargo.toml  README.md
internal/: Cargo.toml
internal/src/: lib.rs
zero-cost-state-machine/: Cargo.toml
zero-cost-state-machine-macro/: Cargo.toml
zero-cost-state-machine-macro/src/: lib.rs  test.rs
zero-cost-state-machine-macro/tests/: statemachine.rs
zero-cost-state-machine-mermaid/: Cargo.toml
zero-cost-state-machine-mermaid/src/: lib.rs  scope.rs  tests.rs
zero-cost-state-machine-mermaid/src/scope/: test.rs
zero-cost-state-machine-mermaid/src/scope/tree/: test.rs
zero-cost-state-machine-mermaid/src/tests/: mermaid.rs  plantuml.rs
zero-cost-state-machine-puml/: Cargo.toml
zero-cost-state-machine-puml/src/: tests.rs
zero-cost-state-machine-puml/src/scope/: tree.rs
zero-cost-state-machine/src/: lib.rs
