[package]
name = "zero-cost-state-machine-macro"
version = "0.1.0"
edition = "2021"
publish = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.48"
proc-macro2 = "1.0.78"
anyhow = "1.0.80"
nom = "7.1.3"
heck = "0.4.1"
zero-cost-state-machine-mermaid = { path = "../zero-cost-state-machine-mermaid" }
itertools = "0.12.1"

[dev-dependencies]
zero-cost-state-machine = {path = "../zero-cost-state-machine"}
pretty_assertions = "1.4.0"
maplit = "1.0.2"
aquamarine = "0.5.0"